# dawgz

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
dawgz/: __init__.py  __main__.py  cli.py  constants.py  schedulers.py  utils.py  workflow.py
dawgz/schedulers/: __init__.py  core.py  local.py  slurm.py
examples/: README.md  dynamic.py  pi.py  precondition.py  simple.md  simple.py  train.py
examples/simple/: README.md  simple.py
tests/: test_backend_async.py  test_backend_slurm.py  test_cli.py  test_utils.py
