[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dawgz"
description = "Directed Acyclic Workflow Graph Scheduling"
authors = [
  {name = "François Rozet", email = "francois.rozet@outlook.com"},
  {name = "Joeri Hermans"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]
keywords = ["workflow", "scheduling", "slurm", "hpc"]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
dawgz = "dawgz.__main__:main"

[project.urls]
documentation = "https://github.com/francois-rozet/dawgz"
source = "https://github.com/francois-rozet/dawgz"
tracker = "https://github.com/francois-rozet/dawgz/issues"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["B", "I", "W"]
ignore = ["B023", "E731"]
preview = true

[tool.ruff.lint.isort]
lines-between-types = 1
no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
preview = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "dawgz.__version__"}

[tool.setuptools.packages.find]
include = ["dawgz*"]
