[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "dawgz"
description = "Directed Acyclic Workflow Graph Scheduling"
authors = [
  {name = "François Rozet", email = "francois.rozet@outlook.com"},
  {name = "Joeri Hermans"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "cloudpickle>=2.0.0",
  "rich>=13.8.0",
  "tabulate>=0.8.0",
  "wonderwords>=3.0.0",
]
dynamic = ["version"]
keywords = ["workflow", "scheduling", "slurm", "hpc"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff==0.9.9",
]

[project.scripts]
dawgz = "dawgz.__main__:main"

[project.urls]
documentation = "https://github.com/francois-rozet/dawgz"
source = "https://github.com/francois-rozet/dawgz"
tracker = "https://github.com/francois-rozet/dawgz/issues"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["ANN", "B", "I", "UP", "W"]
ignore = ["ANN002", "ANN003", "ANN401"]
preview = true

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
preview = true

[tool.setuptools.dynamic]
version = {attr = "dawgz.__version__"}

[tool.setuptools.packages.find]
include = ["dawgz*"]
